--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,28 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+body{
+    background-color: red;
+}
+
+.main_menu ul{
+    text-align: end;
+}
+
+.main_menu ul li, a{
+    text-decoration: none;
+    font-size: 20px;
+    padding: 20px;
+    display: inline-block;
+    text-shadow: 1px 1px black;
+    color: black;
+}
+
+a{
+    width: 50px;
+    height: 50px;
+    background-color: white;
+    border-radius: 50%;
+    padding: 20px;
+}
