--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,6 @@
     box-sizing: border-box;
 }
 
-body{
-    background-color: red;
-}
-
 .main_menu ul{
     text-align: end;
 }
@@ -28,4 +24,20 @@ a{
     background-color: white;
     border-radius: 50%;
     padding: 20px;
+}
+
+section{
+    height: 100vh;
+}
+
+.sec_red{
+    background: red;
+}
+
+.sec_green{
+    background-color: green;
+}
+
+.sec_yellow{
+    background-color: yellow;
 }
