--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 
 html {
     scroll-behavior: smooth;
+    font-family: 'Rubik Mono One', sans-serif;
   }
 
 .main_menu ul{
@@ -32,6 +33,12 @@ a{
 
 section{
     height: 100vh;
+    position: relative;
+}
+
+section h1{
+    font-weight: 600;
+    font-size: 40px;
 }
 
 #sec_red{
@@ -54,3 +61,10 @@ section{
     color: yellow;
 }
 
+.contain_img{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    text-align: center;
+}
