--- a/css/style.css
+++ b/css/style.css
@@ -10,13 +10,20 @@ html {
     font-family: 'Rubik Mono One', sans-serif;
   }
 
+nav{
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 3;
+  }
+
 .main_menu ul{
     text-align: end;
+
 }
 
 .main_menu ul li, a{
     text-decoration: none;
-    font-size: 20px;
     padding: 20px;
     display: inline-block;
     text-shadow: 1px 1px black;
